--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
 
 
@@ -88,7 +89,7 @@ button{
   content: '';
   position: absolute;
   top: 0;
-  left: 0;
+  left: 0px ;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.7);
@@ -126,3 +127,15 @@ background: linear-gradient(90deg, rgba(0, 0, 0, 1) 10%, rgba(224, 224, 224, 1) 
   background: #ffffff;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.31) 1%, rgba(255, 255, 255, 1) 34%, rgba(3, 3, 3, 1) 84%);
 }
+
+.testimonial_cards {  
+  /* display: inline-block;   */
+  /* padding-left: 100%;   */
+  animation: marquee 10s linear infinite ;  
+  animation-delay: 2s;
+}  
+
+@keyframes marquee {  
+  0%   { transform: translateX(0%); }  
+  100% { transform: translateX(-100%); }  
+}  
